# stko

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  justfile  mypy.ini  pyproject.toml  readme.rst  setup.py
.github/: pull_request_template.md
.github/workflows/: publish_release.yml  python-package.yml  remake_rst_files.yml  tests.yml
docs/: .readthedocs.yml  Makefile  environment.yml  remake_modules.bash  remake_modules.sh  requirements.txt
docs/source/: cage_analysis.rst  cage_optimisation.rst  calculators.rst  conf.py  extractors.rst  helpers.rst  hg_optimisation.rst  index.rst  install.rst  modules.rst  molecular.rst  optimizers.rst  results.rst  stko.base_calculator.rst  stko.calculators.calculators.rst  stko.calculators.extractors.cp2k_extractor.rst  stko.calculators.extractors.extractor.rst  stko.calculators.extractors.orca_extractor.rst  stko.calculators.extractors.rst  stko.calculators.extractors.xtb_extractor.rst  stko.calculators.open_babel_calculators.rst  stko.calculators.orca_calculators.rst  stko.calculators.planarity_calculators.planarity_calculators.rst  stko.calculators.planarity_calculators.rst  stko.calculators.rdkit_calculators.rst  stko.calculators.results.energy_results.rst  stko.calculators.results.orca_results.rst  stko.calculators.results.planarity_results.rst  stko.calculators.results.results.rst  stko.calculators.results.rmsd_results.rst  stko.calculators.results.rst  stko.calculators.results.shape_results.rst  stko.calculators.results.torsion_results.rst  stko.calculators.results.xtb_results.rst  stko.calculators.rmsd_calculators.rst  stko.calculators.rst  stko.calculators.shape_calculators.rst  stko.calculators.torsion_calculators.rst  stko.calculators.xtb_calculators.rst  stko.molecular.atoms.dummy_atom.rst  (+36 more)
examples/: aligner_example.py  basic_example.py  cage_analysis_example.py  cage_openmm_example.py  calculators_example.py  environment.yml  gulp_test_example.py  intermediates_example.py  mdanalysis_example.py  molecule_splitter_example.py  obabel_example.py  openmm_example.py  openmm_hg_example.py  optwrite_example.py  orca_example.py  shape_example.py  testable_example.py  topology_extraction_example.py  torsion_example.py  zmatrix_example.py
examples/aligner_directory/: aligned_0.mol  aligned_1.mol  aligned_2.mol  aligned_3.mol  aligned_4.mol  aligned_5.mol  init_0.mol  init_1.mol  init_2.mol  init_3.mol  init_4.mol  init_5.mol  unaligned_0.mol  unaligned_1.mol  unaligned_2.mol  unaligned_3.mol  unaligned_4.mol  unaligned_5.mol
examples/cage_openmm_example_directory/: opt_cage.mol  unopt_cage.mol
examples/cage_output/: apdcage.mol  apdcage_0.mol  apdcage_1.mol  apdcage_10.mol  apdcage_11.mol  apdcage_12.mol  apdcage_13.mol  apdcage_14.mol  apdcage_15.mol  apdcage_16.mol  apdcage_17.mol  apdcage_2.mol  apdcage_3.mol  apdcage_4.mol  apdcage_5.mol  apdcage_6.mol  apdcage_7.mol  apdcage_8.mol  apdcage_9.mol
examples/openmm_example_directory/: ff_opt_cage.mol  ffrest_opt_cage.mol  ffunrest_opt_cage.mol  md_opt_cage.mol  opt_cage.mol  unopt_cage.mol
examples/openmm_hg_example_directory/: opt_complex.mol  unopt_hgcomplex.mol
examples/optwrite_output/: etkdg_out.mol  mmff_out.mol  uff_out.mol
examples/out_intermediates/: idx0_4x3FG+1x2FG.mol  idx10_2x3FG+1x2FG.mol  idx11_1x3FG+2x2FG.mol  idx12_3x3FG.mol  idx13_3x3FG+2x2FG.mol  idx14_4x3FG+1x2FG.mol  idx15_1x3FG+2x2FG.mol  idx16_4x3FG+1x2FG.mol  idx17_2x3FG+1x2FG.mol  idx18_2x3FG+3x2FG.mol  idx19_2x3FG+2x2FG.mol  idx1_1x3FG.mol  idx20_4x3FG+1x2FG.mol  idx21_2x3FG+3x2FG.mol  idx22_2x3FG+3x2FG.mol  idx23_4x3FG.mol  idx24_2x3FG+2x2FG.mol  idx25_4x3FG.mol  idx26_2x3FG+3x2FG.mol  idx27_4x3FG+1x2FG.mol  idx28_2x3FG+2x2FG.mol  idx29_2x3FG+2x2FG.mol  idx2_1x2FG.mol  idx30_2x3FG+2x2FG.mol  idx31_2x3FG+3x2FG.mol  idx32_4x3FG.mol  idx33_2x3FG+2x2FG.mol  idx34_2x3FG+3x2FG.mol  idx35_2x3FG+3x2FG.mol  idx36_2x3FG+3x2FG.mol  idx37_3x3FG+2x2FG.mol  idx38_4x3FG+1x2FG.mol  idx39_4x3FG+1x2FG.mol  idx3_2x3FG+3x2FG.mol  idx40_2x3FG+3x2FG.mol  idx41_2x3FG+3x2FG.mol  idx42_4x3FG+1x2FG.mol  idx43_2x3FG+3x2FG.mol  idx44_4x3FG+1x2FG.mol  idx45_3x3FG+2x2FG.mol  (+7 more)
examples/output_directory/: bb2.mol  obabel_axle_opt.mol  obabel_axle_unopt.mol  obabel_bb1_opt.mol  obabel_bb2_opt.mol  obabel_bb2_unopt.mol  obabel_bb3_opt.mol  obabel_bb3_unopt.mol  obabel_cage2_opt.mol  obabel_cage2_unopt.mol  obabel_cage_opt.mol  obabel_cycle_opt.mol  obabel_cycle_unopt.mol  obabel_hg_complex_opt.mol  obabel_hg_complex_unopt.mol  obabel_m_iron_oct_delta_opt.mol  obabel_m_iron_oct_delta_unopt.mol  obabel_m_moc_opt.mol  obabel_m_moc_unopt.mol  obabel_polymer_opt.mol  obabel_polymer_unopt.mol  obabel_rotaxane_opt.mol  obabel_rotaxane_unopt.mol  poly_etkdg.mol  poly_mmff.mol  poly_uff.mol  polymer.mol
examples/splitter_output_directory/: original.mol  original2.mol  reconstructed.mol  splits2_0.mol  splits2_0.xyz  splits2_1.xyz  splits2_2.mol  splits2_2.xyz  splits2_3.mol  splits2_3.xyz  splits2_4.mol  splits2_4.xyz  splits2_5.xyz  splits2_6.mol  splits2_6.xyz  splits2_7.xyz  splits2_8.mol  splits2_8.xyz  splits_0.mol  splits_0.xyz  splits_1.mol  splits_1.xyz  transform2_0.mol  transform2_1.mol  transform2_2.mol  transform2_3.mol  transform2_4.mol  transform2_5.mol  transform2_6.mol  transform2_7.mol  transform2_8.mol  transform_0.mol  transform_1.mol
src/stko/: __init__.py  cage_analysis.py  functional_groups.py  molecular_utilities.py  molecule_analysis.py  subgroup_analysis.py  topology_functions.py
stko/: __init__.py  base_calculator.py
stko/calculators/: __init__.py  calculators.py  macromodel_calculators.py  open_babel_calculators.py  orca_calculators.py  rdkit_calculators.py  rmsd_calculators.py  shape_calculators.py  torsion_calculators.py  xtb_calculators.py
stko/molecular/: __init__.py
stko/optimizers/: __init__.py  aligner.py  collapser.py  cp2k.py  gulp.py  macromodel.py  open_babel.py  optimizers.py  rdkit.py  xtb.py
stko/utilities/: utilities.py
tests/: benzene.mol  conftest.py  environment.yml  test_benzene.py
tests/calculators/: conftest.py  test_obabel_calculators.py  (+1 more)
(+297 files in other folders)
