[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stko"
maintainers = [
  { name = "Stephen Bennett", email = "s.bennett18@imperial.ac.uk" },
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]
dependencies = [
  "rdkit",
  "stk",
  "networkx",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "moldoc",
  "pip-tools",
  # TODO: Remove pin when https://github.com/TvoroG/pytest-lazy-fixture/issues/65 is resolved.
  # pytest-lazy-fixture 0.6.0 is incompatible with pytest 8.0.0
  "pytest<8",
  "pytest-benchmark",
  "pytest-datadir",
  "pytest-lazy-fixture",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
  "twine",
]

[project.urls]
github = "https://github.com/JelfsMaterialsGroup/stko"
documentation = "https://stko-docs.readthedocs.io"

[tool.setuptools_scm]
write_to = "src/stko/_version.py"

[tool.setuptools.packages.find]
where = [
  # list of folders that contain the packages (["."] by default)
  "src",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_functions = [
  "test_*",
]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
  "scipy.*",
  "pytest_lazyfixture.*",
  "pathos.*",
  "matplotlib.*",
  "pandas.*",
  "seaborn.*",
  "mchammer.*",
  "spindry.*",
  "pymongo.*",
  "vabene.*",
  "setuptools.*",
  "stk.*",
  "networkx.*",
  "openbabel.*",
  "MDAnalysis.*",
]
ignore_missing_imports = true
